<package>
  <name>behavior_go_to_hover_pick_pose</name>
  <version>1.0.0</version>
  <description>
     move arm to hover pose of picking
  </description>
  <maintainer email="todo@todo.com">Ben</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_go_to_hover_pick_pose</url>
  <author>Ben</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>birl_baxter_flexbe_states</run_depend>

</package>