<package>
  <name>behavior_place_behavior</name>
  <version>1.0.0</version>
  <description>
     place a object below the gripper
  </description>
  <maintainer email="todo@todo.com">Ben</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_place_behavior</url>
  <author>Ben</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>birl_baxter_flexbe_states</run_depend>

</package>